# mdlp-discretization

./: pyproject.toml  setup.py
mdlp/: _mdlp.cpp  _mdlp.pyx
